[metadata]
name = wxutils
description = Utilities and convenience classes and functions for wxPython
long_description =
    wxutils provides wxPython utilities and convenience functions.  The wxutils
    library is a small collection of functions and classes, and is by no means
    comprehensive. The aim is to simplify code, reduce boiler-plate, make wxPython
    coding a  bit more python-like, and prevent repeating code across projects.

    Most of the classes in wxutils are simplified versions of wxPython widgets
    with limited but common attributes and patterns.  For example::
	btn = wxutils.Button(parent, label, action=action, **kws)

    binds a callback function (the "action") to a wx.Button, corresponding to::
	b = wx.Button(parent, label=label, **kws)
	if callable(action):
	    parent.Bind(wx.EVT_BUTTON, action, b)

    This can be viewed as merely a convenience, and not completely general. But it
    is also a common pattern, and replaces 3 lines with 1, and hides the ugliest
    parts of wxPython. There are several similar convenience widgets, including
    Check, Choice, and SimpleText (a simplified variant of StaticText), MenuItem,
    Font, HLine, OkCancel, HyperText, as well as more complex widgets, such as

       * ``FloatCtrl`` a wx.TextCrtl that allows numerical input only. Precision,
	 upper bound, and lower bound can be set, and a callback can be bound to
	 the control.

       * ``NumericCombo`` wx.ComboBox with a FloatCtrl

       * ``EditableListBox`` a list box with a built-in popup menu to arrange order of
	 the items with "move up/down, to top, to bottom"

       * ``YesNo`` a wx.Choice of only 'No' and 'Yes'

       * ``GridPanel`` a combined GridBagSizer and Panel that simplifies adding
	 widgets to a GridBagSizer.

       * ``FileOpen``, ``FileSave`` wrappers (supporting wildcards) to FileDialog.
       And some other miscellaneous stuff as well.  It is sort of a motley collection.

author = Matthew Newville
author_email = matt.newville@gmail.com
url = https://github.com/newville/wxutils
license = BSD License
platforms = any
version  = 0.2.5
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = wxPython
project_urls =
    Source =  https://github.com/newville/wxutils
    Documentation = https://github.com/newville/wxutils/README.rst
    Tracker = https://github.com/newville/wxutils/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = wxPython
