[metadata]
name = wxutils
description = utilities and conveniences for wxPython
long_description =
    wxutils provides utilities and convenience functions for wxPython.

author = Matthew Newville
author_email = matt.newville@gmail.com
url = https://github.com/newville/wxutils
license = BSD License
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = wxPython
project_urls =
    Source =  https://github.com/newville/wxutils
    Documentation = https://github.com/newville/wxutils/README.rst
    Tracker = https://github.com/newville/wxutils/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = wxPython
