[metadata]
name = wxutils
description = utilities and conveniences for wxPython
long_description =
    wxutils provides utilities and convenience functions for wxPython. The wxutils
    library is a small collection of functions and classes, and is by no means
    comprehensive. The aim is to simplify code, reduce boiler-plate, make wxPython
    coding a  bit more python-like, and prevent repeating code across projects.
    Many of the classes in wxutils are simplified versions of wxPython widgets
    that add callbacks for normal action events.

author = Matthew Newville
author_email = matt.newville@gmail.com
url = https://github.com/newville/wxutils
license = BSD License
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords = wxPython
project_urls =
    Source =  https://github.com/newville/wxutils
    Documentation = https://github.com/newville/wxutils/
    Tracker = https://github.com/newville/wxutils/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = wxPython
